Solved Arabic language problem and added amount fileds in order tab of assesement -> workbench

--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -141,5 +141,6 @@
   "attach_back": "Back Side",
   "card_number": "Card Number",
   "bill_date": "Bill Date",
-  "bill_details": "Bill Details"
+  "bill_details": "Bill Details",
+  "patient_type": "Patient Type"
 }
