--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -152,5 +152,7 @@
   "sec_comp_lbl": "شركة ثانوية",
   "card_number": "رقم البطاقة",
 
-  "bill_details": "تفاصيل الفاتورة"
+  "bill_details": "تفاصيل الفاتورة",
+
+  "patient_type": "نوع المريض"
 }
