--- a/client/public/languages/InsuranceSetup_en.json
+++ b/client/public/languages/InsuranceSetup_en.json
@@ -1,5 +1,5 @@
 {
-  "form_name": "Insurance",
+  "form_name": "Insurance Provider List",
   "form_home": "Home",
 
   "insurance_provider_code": "Insurance Code",
