Sheet Level discount doen and added pharmacy designs

--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -71,7 +71,7 @@
   "advance_adjust": "يعدل",
   "sheet_discount_amount": "كمية",
   "bill_amount": "مبلغ الفاتورة",
-  "sheet_discount": "خصم ورقة المستوى",
+  "sheet_discount": "% خصم ورقة المستوى",
   "net_amount": "شبكة",
   "credit_amount": "ائتمان",
   "receiveable_amount": "ذمم مدينة",
