--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -68,7 +68,7 @@
   "company_share": "Company",
   "advance": "Advance",
   "advance_adjust": "Adjust",
-  "sheet_discount": "Sheet Level Discount",
+  "sheet_discount": "Sheet Level Discount %",
   "sheet_discount_amount": "Amount",
   "bill_amount": "Bill Amount",
   "net_amount": "Net",
