Pharmacy Setup finished and design part of transations done

--- a/client/public/languages/PharmacySetup_ar.json
+++ b/client/public/languages/PharmacySetup_ar.json
@@ -18,5 +18,6 @@
   "created_date": "الإنشاءخ تاريخ",
 
   "category_id": "الفئة",
-  "location_type": "نوع الموقع"
+  "location_type": "نوع الموقع",
+  "allow_pos": "السماح POS"
 }
