Item master and pharmacy setup chnages done

--- a/client/public/languages/PharmacySetup_en.json
+++ b/client/public/languages/PharmacySetup_en.json
@@ -6,6 +6,8 @@
   "item_group": "Item Group",
   "item_uom": "Item UOM",
   "location": "Locatiom",
+  "item_form": "Form",
+  "item_storage": "Storage",
 
   "Addbutton": "Add to list",
 
