--- a/client/public/languages/EmployeeMasterIndex_en.json
+++ b/client/public/languages/EmployeeMasterIndex_en.json
@@ -11,6 +11,16 @@
   "personal_details": "Personal Details",
   "commission_setup": "Commission Setup",
 
+  "title_id": "Title",
+  "arabic_name": "Name in Arabic",
+  "gender": "Gender",
+  "date_of_birth": "Date Of Birth",
+  "contact_no": "Mobile No.",
+  "country_id": "Country",
+  "state_id": "State",
+  "city_id": "City",
+  "address": "Address",
+
   "btn_addnew": "Add New",
   "btn_clear": "Clear",
 
