employee master and front desk changes done

--- a/client/public/languages/EmployeeMasterIndex_en.json
+++ b/client/public/languages/EmployeeMasterIndex_en.json
@@ -20,7 +20,20 @@
   "state_id": "State",
   "city_id": "City",
   "address": "Address",
+  "attach_photo": "Attach Photo",
+  "email": "Email",
+  "blood_group": "Blood Group",
+  "pincode": "Pincode",
+  "date_of_joining": "Date of Join",
+  "date_of_leaving": "Date of left",
 
+  "service_type_id": "Service Type",
+  "op_cash_comission_percent": "OP Cash %",
+  "op_credit_comission_percent": "OP Credit %",
+  "ip_cash_commission_percent": "IP Cash %",
+  "ip_credit_commission_percent": "IP Credit %",
+  "services_id": "Service",
+  "isdoctor": "Is Doctor",
   "btn_addnew": "Add New",
   "btn_clear": "Clear",
 
