--- a/client/public/languages/OPBilling_en.json
+++ b/client/public/languages/OPBilling_en.json
@@ -109,5 +109,7 @@
   "card_no": "Card Number",
   "ins_expiry_date": "Expiry Date",
 
+  "consultation": "تشاور",
+
   "bill_details": "Bill Details"
 }
