Front desk clean up and employee arabic done

--- a/client/public/languages/EmployeeMasterIndex_en.json
+++ b/client/public/languages/EmployeeMasterIndex_en.json
@@ -11,7 +11,7 @@
 
   "personal_details": "Personal Details",
   "commission_setup": "Commission Setup",
-  "deptuser_details": "Depaetment/User",
+  "deptuser_details": "Department/User",
 
   "title_id": "Title",
   "arabic_name": "Name in Arabic",
