--- a/client/public/languages/FrontDeskAr_ar.json
+++ b/client/public/languages/FrontDeskAr_ar.json
@@ -12,8 +12,8 @@
   "date_of_birth": "تاريخ الميلاد",
   "age": "العمر",
   "marital_status": "الحالة الزوجية",
-  "address1": "الاضافات 1",
-  "address2": "الاضافات 2",
+  "address1": "العنوان 1",
+  "address2": "العنوان 2",
   "contact_number": "رقم الجوال",
   "email": "عنوان البريد الإلكتروني",
   "visa_type_id": "نوع التأشيرة",
