--- a/client/public/languages/Appointment_en.json
+++ b/client/public/languages/Appointment_en.json
@@ -1,3 +1,143 @@
 {
-  "department_name": "Department Name"
+  "department_name": "Department Name",
+  "patient_code": "Patient Code",
+  "registration_date": "Registration Date",
+  "title_id": "Title",
+  "first_name": "First Name",
+  "middle_name": "Middle Name",
+  "last_name": "Last Name",
+  "full_name": "Name",
+  "arabic_name": "Name in Arabic",
+  "gender": "Gender",
+  "religion_id": "Religion",
+  "date_of_birth": "Date Of Birth",
+  "age": "Age",
+  "marital_status": "Marital Status",
+  "address1": "Address 1",
+  "address2": "Address 2",
+  "contact_number": "Mobile Number",
+  "email": "Email Address",
+  "visa_type_id": "Visa Type",
+  "nationality_id": "Nationality",
+  "postal_code": "Postal Code",
+  "country_id": "Country",
+  "state_id": "State",
+  "city_id": "City",
+  "primary_identity_id": "Primary ID Type",
+  "primary_id_no": "Primary ID Number",
+  "secondary_identity_id": "Secondary ID",
+  "secondary_id_no": "Number",
+  "secondary_contact_number": "Secondary Contact Number",
+  "emergency_contact_name": "Emergency Contact Name",
+  "emergency_contact_number": "Emergency Contact Number",
+  "relationship_with_patient": "Relationship With Patient",
+  "visit_type": "Visit Type",
+  "visit_date": "Visit Date",
+  "department_id": "Department",
+  "doctor_id": "Doctor",
+  "maternity_patient": "Maternity Patient",
+  "is_mlc": "Is MLC",
+  "mlc_accident_reg_no": "Accident Registration Number",
+  "mlc_police_station": "Police Station Name",
+  "mlc_wound_certified_date": "Wound Certified Date",
+  "visit_code": "Visit Code",
+  "btn_save": "Save",
+  "btn_clear": "Clear",
+  "btn_advance": "Advance",
+  "btn_refund": "Refund",
+  "tab_patdtls": "Patient Details",
+  "tab_othinf": "Other Information",
+  "tab_condtls": "Consultation Details",
+  "tab_mlcpat": "MLC Patient",
+  "tab_primaryins": "Primary Insurance Details",
+  "tab_secondaryins": "Secondary Insurance Details",
+  "tab_billdtls": "Billing Details",
+  "tab_recipts": "Recipts",
+  "form_patregister": "Patient Registration",
+  "form_name": "Front Desk",
+  "form_home": "Home",
+  "form_create": "Create New",
+  "form_yes": "Yes",
+  "form_no": "No",
+  "hijiri_date": "Hijiri Date",
+  "attach_photo": "Attach Photo",
+  "attach_idcard": "Attach ID Card",
+  "bill": "Bill Number",
+  "gross_total": "Gross Total",
+  "share": "Share",
+  "patient_share": "Patient",
+  "company_share": "Company",
+  "advance": "Advance",
+  "advance_adjust": "Adjust",
+  "sheet_discount": "Sheet Level Discount %",
+  "sheet_discount_amount": "Amount",
+  "bill_amount": "Bill Amount",
+  "net_amount": "Net",
+  "credit_amount": "Credit",
+  "receiveable_amount": "Receivable",
+  "receipt_number": "Receipt Number",
+  "receipt_date": "Receipt Date",
+  "counter_id": "Counter",
+  "shift_id": "Shift",
+  "total_amount": "Total Amount",
+  "sl_no": "Sl No.",
+  "pay_type": "Pay Type",
+  "card_check_number": "Number",
+  "expiry_date": "Expiry Date",
+  "amount": "Amount",
+  "unbalanced_amount": "Unbalanced Amount",
+  "service_type_id": "Service Type",
+  "services_id": "Service",
+  "quantity": "Quantity",
+  "unit_cost": "Unit Cost",
+  "gross_amount": "Gross Amount",
+  "discount_percentage": "Discount %",
+  "discount_amout": "Discount Amt.",
+  "net_amout": "Net Amount",
+  "insurance": "Insurance",
+  "copay_percentage": "Copay %",
+  "copay_amount": "Copay Amt.",
+  "deductable_percentage": "Deductable %",
+  "deductable_amount": "Deductable Amt.",
+  "tax_inclusive": "Tax Inclusive",
+  "patient_tax": "Patient Tax",
+  "company_tax": "Company Tax",
+  "total_tax": "Total Tax",
+  "patient_resp": "Patient Responsible",
+  "patient_payable": "Patient Share",
+  "company_resp": "Company Responsible",
+  "company_payble": "Company Payable",
+  "sec_company": "Secondary Insurance",
+  "sec_deductable_amount": "Deductable Amt.",
+  "sec_deductable_percentage": "Deductable %",
+  "sec_company_res": "Company Responsible",
+  "sec_company_tax": "Secondary Company Tax",
+  "sec_company_paybale": "Secondary Company Share",
+  "sec_copay_percntage": "Copay %",
+  "sec_copay_amount": "Copay Amt.",
+  "tax_Detsils": "Tax Details",
+  "prim-insurance": "Primary Insurance",
+  "present-bill-services": "Current Bill Services",
+  "advance_amount": "Available Advance",
+  "advance_caption": "Advance",
+  "refund_caption": "Refund",
+  "responsibility_lbl": "Responsibility",
+  "tax_lbl": "Tax",
+  "payable_lbl": "Payable",
+  "patient_lbl": "Patient",
+  "company_lbl": "Primary Company",
+  "sec_comp_lbl": "Secondary Company",
+  "payment_number": "Payment Number",
+  "payment_date": "Payment Date",
+  "insurance_id": "Insurance Company",
+  "sub_insurance_id": "Sub Insurance Company",
+  "plan_id": "Plan",
+  "policy_id": "Policy",
+  "effective_start_date": "Effective Start Date",
+  "attach_front": "Front Side",
+  "attach_back": "Back Side",
+  "card_number": "Card Number",
+  "bill_date": "Bill Date",
+  "bill_details": "Bill Details",
+  "patient_type": "Patient Type"
 }
