Patient Registration Clean Up

--- a/client/public/languages/Appointment_en.json
+++ b/client/public/languages/Appointment_en.json
@@ -24,12 +24,12 @@
   "state_id": "State",
   "city_id": "City",
   "primary_identity_id": "Primary ID Type",
-  "primary_id_no": "Primary ID Number",
+  "primary_id_no": "Primary ID No.",
   "secondary_identity_id": "Secondary ID",
   "secondary_id_no": "Number",
-  "secondary_contact_number": "Secondary Contact Number",
+  "secondary_contact_number": "Secondary Contact No.",
   "emergency_contact_name": "Emergency Contact Name",
-  "emergency_contact_number": "Emergency Contact Number",
+  "emergency_contact_number": "Emergency Contact  No.",
   "relationship_with_patient": "Relationship With Patient",
   "visit_type": "Visit Type",
   "visit_date": "Visit Date",
@@ -37,7 +37,7 @@
   "doctor_id": "Doctor",
   "maternity_patient": "Maternity Patient",
   "is_mlc": "Is MLC",
-  "mlc_accident_reg_no": "Accident Registration Number",
+  "mlc_accident_reg_no": "Accident Registration  No.",
   "mlc_police_station": "Police Station Name",
   "mlc_wound_certified_date": "Wound Certified Date",
   "visit_code": "Visit Code",
