--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -15,6 +15,8 @@
   "address1": "الاضافات 1",
   "address2": "الاضافات 2",
   "contact_number": "رقم الجوال",
+  "mobile": "التليفون",
+  "number": "رقم",
   "email": "عنوان البريد الإلكتروني",
   "visa_type_id": "نوع التأشيرة",
   "nationality_id": "الجنسية",
