--- a/client/public/languages/Appointment_en.json
+++ b/client/public/languages/Appointment_en.json
@@ -125,12 +125,12 @@
   "tax_lbl": "Tax",
   "payable_lbl": "Payable",
   "patient_lbl": "Patient",
-  "company_lbl": "Primary Company",
-  "sec_comp_lbl": "Secondary Company",
+  "company_lbl": "Primary  Co.",
+  "sec_comp_lbl": "Secondary  Co.",
   "payment_number": "Payment Number",
   "payment_date": "Payment Date",
-  "insurance_id": "Insurance Company",
-  "sub_insurance_id": "Sub Insurance Company",
+  "insurance_id": "Insurance  Co.",
+  "sub_insurance_id": "Sub Insurance Co.",
   "plan_id": "Plan",
   "policy_id": "Policy",
   "effective_start_date": "Effective Start Date",
