MRD Bug fixes and Shift Master

--- a/client/public/languages/BusinessSetup_en.json
+++ b/client/public/languages/BusinessSetup_en.json
@@ -33,5 +33,8 @@
   "shift": "Shift",
   "counter": "Counter",
   "master_setup": "Master Setup",
-  "home": "Home"
+  "home": "Home",
+  "shift_code": "Shift Code",
+  "shift_description": "Shift Description",
+  "arabic_name": "Arabic Description"
 }
