--- a/client/public/languages/OPBilling_en.json
+++ b/client/public/languages/OPBilling_en.json
@@ -121,5 +121,8 @@
   "procedure": "Procedure",
   "dental": "Dental",
   "medicine": "Medicine",
-  "co_insurance": "Co_Insurance"
+  "co_insurance": "Co_Insurance",
+
+  "btn_save": "Save",
+  "btn_clear": "Clear"
 }
