OP Billing issue sdone

--- a/client/public/languages/OPBillingAr_ar.json
+++ b/client/public/languages/OPBillingAr_ar.json
@@ -21,6 +21,7 @@
   "payable": "تدفع",
 
   "select_service": "اختر الخدمة",
+  "select_service_type": "اختر نوع الخدمة",
 
   "gross_total": "المجموع الكلي",
   "advance_adjust": "يعدل",
