Global Form Validation + Added Insurance Page now + Implemented swal alert insurance + autocomplete code issue fix + date component  code issue fix + formGroup added required

--- a/client/public/languages/InsuranceSetup_ar.json
+++ b/client/public/languages/InsuranceSetup_ar.json
@@ -64,5 +64,6 @@
   "filter_by": "مصنف بواسطة",
 
   "edit_option": "عمل",
-  "currency": "دقة"
+  "currency": "دقة",
+  "Cannotbeblank": "لا يمكن أن يكون فارغا"
 }
