--- a/client/public/languages/InsuranceSetup_en.json
+++ b/client/public/languages/InsuranceSetup_en.json
@@ -73,5 +73,6 @@
   "filter_by": "Filter By",
 
   "edit_option": "Action",
-  "currency": "Currency"
+  "currency": "Currency",
+  "Cannotbeblank": "Cannot be blank."
 }
