OP Billing and front desk and radiology issue sand swal added

--- a/client/public/languages/RadOrderedList_en.json
+++ b/client/public/languages/RadOrderedList_en.json
@@ -5,6 +5,7 @@
   "patient_name": "Patient Name",
   "proiorty": "Priority",
   "status": "Status",
+  "billed": "Billed/Not Billed",
 
   "investigation_code": "Investigation Code",
   "investigation_name": "Investigation Name",
