Settings UI clean up and form validations in all the setups

--- a/client/public/languages/PharmacySetup_en.json
+++ b/client/public/languages/PharmacySetup_en.json
@@ -5,7 +5,7 @@
   "item_generic": "Item Generic",
   "item_group": "Item Group",
   "item_uom": "Item UOM",
-  "location": "Locatiom",
+  "location": "Location",
   "item_form": "Form",
   "item_storage": "Storage",
 
