--- a/client/public/languages/InsuranceSetup_en.json
+++ b/client/public/languages/InsuranceSetup_en.json
@@ -86,5 +86,6 @@
 
   "edit_option": "Action",
   "currency": "Currency",
-  "Cannotbeblank": "Cannot be blank."
+  "Cannotbeblank": "Cannot be blank.",
+  "hospital_id": "Hospital"
 }
