--- a/client/public/languages/AppointmentSetup_en.json
+++ b/client/public/languages/AppointmentSetup_en.json
@@ -10,5 +10,6 @@
   "room": "Room",
   "room_status": "Room Status",
   "created_by": "Created By",
-  "created_date": "Created Date"
+  "created_date": "Created Date",
+  "steps": "Order"
 }
