Issues fixed in major places

--- a/client/public/languages/DoctorsWorkbench_en.json
+++ b/client/public/languages/DoctorsWorkbench_en.json
@@ -29,6 +29,7 @@
 
   "visit_code": "Visit Code",
   "select_service": "Select Service",
+  "test_type": "Test Type",
 
   "service_type_id": "Service Type",
   "services_id": "Service",
