Vitals Master and Staff Cash Collection Screen Changes

--- a/client/public/languages/MedicalWorkbenchSetup_ar.json
+++ b/client/public/languages/MedicalWorkbenchSetup_ar.json
@@ -1,4 +1,5 @@
 {
   "physical_examination": "الفحص البدني",
-  "review_of_systems": "اعادة النظر بالانظمة"
+  "review_of_systems": "اعادة النظر بالانظمة",
+  "vitals_master": ""
 }
