--- a/client/public/languages/MedicalWorkbenchSetup_en.json
+++ b/client/public/languages/MedicalWorkbenchSetup_en.json
@@ -11,5 +11,7 @@
   "max_age": "Max Age",
   "min_value": "Min Value",
   "max_value": "Max Value",
-  "general": "General"
+  "general": "General",
+  "display": "Display",
+  "select_department": "Select Department"
 }
