User Shift Mapping Functionality

--- a/client/public/languages/BusinessSetup_ar.json
+++ b/client/public/languages/BusinessSetup_ar.json
@@ -33,5 +33,6 @@
   "shift": "تحول",
   "counter": "عداد",
   "master_setup": "الإعداد الرئيسي",
-  "home": "الصفحة الرئيسية"
+  "home": "الصفحة الرئيسية",
+  "users_shift": "تحول المستخدم"
 }
