--- a/client/public/languages/InvoiceGeneration_en.json
+++ b/client/public/languages/InvoiceGeneration_en.json
@@ -29,7 +29,7 @@
   "sec_company": "Secondary Insurance",
   "sec_deductable_amount": "Deductable Amt.",
   "sec_deductable_percentage": "Deductable %",
-  "sec_company_res": "Company Responsible",
+  "sec_company_res": "Secondary Company Responsible",
   "sec_company_tax": "Secondary Company Tax",
   "sec_company_paybale": "Secondary Company Share",
   "sec_copay_percntage": "Copay %",
