--- a/client/public/languages/AppointmentSetup_ar.json
+++ b/client/public/languages/AppointmentSetup_ar.json
@@ -4,6 +4,7 @@
   "appointment_clinics": "عيادات المواعيد",
   "color_code": "رمز اللون",
   "description": "وصف,",
+  "roomName": "اسم الغرفة / الرقم",
   "default_status": "الحالة الافتراضية",
   "department_name": "اسم القسم",
   "doctor": "طبيب",
