--- a/client/public/languages/AppointmentSetup_en.json
+++ b/client/public/languages/AppointmentSetup_en.json
@@ -4,6 +4,7 @@
   "appointment_clinics": "Appointment Clinics",
   "color_code": "Color Code",
   "description": "Description",
+  "roomName": "Room Name / No.",
   "default_status": "Default Status",
   "department_name": "Department Name",
   "doctor": "Doctor",
