Speciality and Category Masters

--- a/client/public/languages/BusinessSetup_ar.json
+++ b/client/public/languages/BusinessSetup_ar.json
@@ -34,5 +34,7 @@
   "counter": "عداد",
   "master_setup": "الإعداد الرئيسي",
   "home": "الصفحة الرئيسية",
-  "users_shift": "تحول المستخدم"
+  "users_shift": "تحول المستخدم",
+  "speciality": "تخصص",
+  "category": "الفئة"
 }
