UI Clean up - Business Setup + Appointment Setup + Master Tab UI Tweak

--- a/client/public/languages/BusinessSetup_en.json
+++ b/client/public/languages/BusinessSetup_en.json
@@ -6,10 +6,10 @@
   "inactive": "Inactive",
   "department_code": "Department Code",
   "department_name": "Department Name",
-  "department_name_arabic": "Department Name(عربى)",
-  "sub_department_code": "Sub Department Code",
-  "sub_department_name": "Sub Department Name",
-  "sub_department_name_arabic": "Sub Department Name(عربى)",
+  "department_name_arabic": "Dept. Name(عربى)",
+  "sub_department_code": "Sub Dept. Code",
+  "sub_department_name": "Sub Dept. Name",
+  "sub_department_name_arabic": "Sub Dept. Name (عربى)",
   "effective_start_date": "Effective Start Date",
   "department_type": "Department Type",
   "head_department": "Head Department",
