Vendor Setup Structure

--- a/client/public/languages/BusinessSetup_ar.json
+++ b/client/public/languages/BusinessSetup_ar.json
@@ -1,6 +1,7 @@
 {
   "business_setup": "إعداد الأعمال",
   "departments": "الأقسام",
+  "department": "الأقسام",
   "status": "الحالة",
   "active": "نشط",
   "inactive": "غير نشط",
