Item Price List Integration in Item Master and Inventory Item Master

--- a/client/public/languages/ItemSetup_en.json
+++ b/client/public/languages/ItemSetup_en.json
@@ -29,6 +29,11 @@
   "vat_applicable": "Vat Applicable",
   "vat_percent": "Vat Percent",
 
+  "purchase_cost": "Purchase Cost",
+  "markup_percent": "Markup Percentage",
+  "sales_price": "Sales Price",
+  "decimal": "Decimals",
+
   "btnSave": "Save",
   "btnUpdate": "Update"
 }
