--- a/client/public/languages/InventoryItemMaster_en.json
+++ b/client/public/languages/InventoryItemMaster_en.json
@@ -28,6 +28,11 @@
   "vat_applicable": "Vat Applicable",
   "vat_percent": "Vat Percent",
 
+  "purchase_cost": "Purchase Cost",
+  "markup_percent": "Markup Percentage",
+  "sales_price": "Sales Price",
+  "decimal": "Decimals",
+
   "btnSave": "Save",
   "btnUpdate": "Update"
 }
