autocomplete few code + change op billing text from credit to balance due

--- a/client/public/languages/OPBillingAr_ar.json
+++ b/client/public/languages/OPBillingAr_ar.json
@@ -30,6 +30,7 @@
   "sheet_discount": "خصم ورقة المستوى",
   "net_amount": "شبكة",
   "credit_amount": "ائتمان",
+  "balance_due": "الرصيد المستحق",
   "receiveable_amount": "ذمم مدينة",
 
   "service_type_id": "نوع الخدمة",
