--- a/client/public/languages/AdministrationSetup_ar.json
+++ b/client/public/languages/AdministrationSetup_ar.json
@@ -1,3 +1,9 @@
 {
-  "login_users": "مستخدمو تسجيل الدخول"
+  "login_users": "مستخدمو تسجيل الدخول",
+  "username": "اسم المستخدم",
+  "password": "كلمه السر",
+  "confirm_password": "تأكيد كلمة المرور",
+  "group": "مجموعة",
+  "role": "وظيفة",
+  "add_to_list": "أضف إلى القائمة"
 }
