Changed billing part in Front Desk + change text from Credit Amount to Balance Due

--- a/client/public/languages/Appointment_en.json
+++ b/client/public/languages/Appointment_en.json
@@ -74,6 +74,7 @@
   "bill_amount": "Bill Amount",
   "net_amount": "Net",
   "credit_amount": "Credit",
+  "balance_due": "Balance Due",
   "receiveable_amount": "Receivable",
   "receipt_number": "Receipt Number",
   "receipt_date": "Receipt Date",
