--- a/client/public/languages/FrontDeskAr_ar.json
+++ b/client/public/languages/FrontDeskAr_ar.json
@@ -74,6 +74,7 @@
   "sheet_discount": "% خصم ورقة المستوى",
   "net_amount": "شبكة",
   "credit_amount": "ائتمان",
+  "balance_due": "الرصيد المستحق",
   "receiveable_amount": "ذمم مدينة",
 
   "receipt_number": "عدد إيصال",
