--- a/client/public/languages/FrontDesk_en.json
+++ b/client/public/languages/FrontDesk_en.json
@@ -75,7 +75,8 @@
   "sheet_discount_amount": "Amount",
   "bill_amount": "Bill Amount",
   "net_amount": "Net",
-  "credit_amount": "Credit",
+  "credit_amount": "Credit Amount",
+  "balance_due": "Balance Due",
   "receiveable_amount": "Receivable",
   "receipt_number": "Receipt Number",
   "receipt_date": "Receipt Date",
