--- a/client/public/languages/AdministrationSetup_ar.json
+++ b/client/public/languages/AdministrationSetup_ar.json
@@ -5,5 +5,6 @@
   "confirm_password": "تأكيد كلمة المرور",
   "group": "مجموعة",
   "role": "وظيفة",
-  "add_to_list": "أضف إلى القائمة"
+  "add_to_list": "أضف إلى القائمة",
+  "display_name": "اسم العرض"
 }
