--- a/client/public/languages/AdministrationSetup_en.json
+++ b/client/public/languages/AdministrationSetup_en.json
@@ -5,5 +5,6 @@
   "confirm_password": "Confirm Password",
   "group": "Group",
   "role": "Role",
-  "add_to_list": "Add To List"
+  "add_to_list": "Add To List",
+  "display_name": "Display Name"
 }
