--- a/client/public/languages/AdministrationSetup_en.json
+++ b/client/public/languages/AdministrationSetup_en.json
@@ -6,5 +6,6 @@
   "group": "Group",
   "role": "Role",
   "add_to_list": "Add To List",
-  "display_name": "Display Name"
+  "display_name": "Display Name",
+  "effective_start_date": "Effective Start Date"
 }
