--- a/client/public/languages/InventoryItemMaster_en.json
+++ b/client/public/languages/InventoryItemMaster_en.json
@@ -7,6 +7,7 @@
   "category_id": "Category",
   "action": "Action",
 
+  "item_type": "Item Type",
   "group_id": "Group",
   "item_code": "Item Code",
   "item_uom_id": "Material Requisition UOM",
