--- a/client/src/Language/FrontDesk.json
+++ b/client/src/Language/FrontDesk.json
@@ -28,7 +28,7 @@
   },
   "full_name": {
     "english": "Name",
-    "target": "اسم"
+    "target": "الاسم باللغة الإنجليزية"
   },
   "arabic_name": {
     "english": "Name in Arabic",
