OP Billing Arabic Converston

--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -155,6 +155,7 @@
   "card_number": "رقم البطاقة",
 
   "bill_details": "تفاصيل الفاتورة",
+  "process_insurance": "التأمين على العمليات",
 
   "patient_type": "نوع المريض"
 }
