--- a/client/public/languages/FrontDesk_ar.json
+++ b/client/public/languages/FrontDesk_ar.json
@@ -1,22 +1,22 @@
 {
   "patient_code": "رمز المريض",
   "registration_date": "تاريخ التسجيل",
+  "registered_date": "تاريخ التسجيل",
   "title_id": "العنوان",
   "first_name": "الاسم الاول",
   "middle_name": "الاسم الأوسط",
   "last_name": "اسم العائلة",
   "full_name": "اسم",
-  "arabic_name": "الاسم باللغة العربية",
+  "enter_eng_fullName": "أدخل الاسم باللغة الإنجليزية",
+  "arabic_name": "أدخل الاسم باللغة العربية",
   "gender": "الجنس",
   "religion_id": "ريليج",
   "date_of_birth": "تاريخ الميلاد",
   "age": "العمر",
   "marital_status": "الحالة الزوجية",
-  "address1": "الاضافات 1",
-  "address2": "الاضافات 2",
+  "address1": "العنوان 1",
+  "address2": "العنوان 2",
   "contact_number": "رقم الجوال",
-  "mobile": "التليفون",
-  "number": "رقم",
   "email": "عنوان البريد الإلكتروني",
   "visa_type_id": "نوع التأشيرة",
   "nationality_id": "الجنسية",
@@ -76,6 +76,7 @@
   "sheet_discount": "% خصم ورقة المستوى",
   "net_amount": "شبكة",
   "credit_amount": "ائتمان",
+  "balance_due": "الرصيد المستحق",
   "receiveable_amount": "ذمم مدينة",
 
   "receipt_number": "عدد إيصال",
@@ -101,7 +102,9 @@
   "insurance": "تأمين",
   "copay_percentage": "كوباي٪",
   "copay_amount": "مبلغ التعويض",
-
+  "responsibility_lbl": "المسئولية",
+  "tax_lbl": "ضريبة",
+  "payable_lbl": "تدفع",
   "deductable_percentage": "خصم ٪",
   "deductable_amount": "مقدار الخصم",
 
@@ -157,5 +160,11 @@
   "bill_details": "تفاصيل الفاتورة",
   "process_insurance": "التأمين على العمليات",
 
-  "patient_type": "نوع المريض"
+  "patient_type": "نوع المريض",
+
+  "payby_cash": "الدفع نقدا",
+  "payby_card": "الدفع عن طريق البطاقة",
+  "payby_check": "الدفع عن طريق شيك",
+  "NotGenerated": "غير منشأ",
+  "PastVisit": "الزيارة السابقة"
 }
